feat: version API routes
